# gerstner-wave-sim

./: .gitignore  CMakeLists.txt  README.md
src/: camera.cpp  camera.hpp  geometry.cpp  geometry.hpp  gl_helper.cpp  gl_helper.hpp  main.cpp  trackball_ctrl.cpp  trackball_ctrl.hpp  utilities.cpp  utilities.hpp
src/shaders/: FragmentShader.fs  VertexShader.vs
